# advent-of-code-2024

./: Cargo.toml
day01/part1/: main.rs
day01/part2/: main.rs
day02/part1/: main.rs
day02/part2/: main.rs
day03/part1/: main.rs
day03/part2/: main.rs
day04/part1/: main.rs
day04/part2/: main.rs
day05/part1/: main.rs
day05/part2/: main.rs
day06/part1/: main.rs
day06/part2/: main.rs
day07/part1/: main.rs
day07/part2/: main.rs
day08/part1/: main.rs
day08/part2/: main.rs
day09/part1/: main.rs
day09/part2/: main.rs
day10/part1/: main.rs
day10/part2/: main.rs
day11/part1/: main.rs
day11/part2/: main.rs
day12/part1/: main.rs
day12/part2/: main.rs
lib/: aoc.rs  finite_automata.rs  lib.rs  nom_helpers.rs
lib/strings/: finite_automata.rs
tests/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs  day-07.rs  day-08.rs  day-09.rs  day-1.rs  day-10.rs  day-11.rs  day-12.rs  day-2.rs  day-3.rs  day-4.rs  day-5.rs  day-6.rs  day-7.rs  day-8.rs  day-9.rs
