[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
assert_cmd = "2.0"
predicates = "2.1"
regex = "1.11.1"

[lib]
name = "aoc2024"
path = "lib/lib.rs"

[[bin]]
name = "day01_1"
path = "day01/part1/main.rs"

[[bin]]
name = "day01_2"
path = "day01/part2/main.rs"

[[bin]]
name = "day02_1"
path = "day02/part1/main.rs"

[[bin]]
name = "day02_2"
path = "day02/part2/main.rs"

[[bin]]
name = "day03_1"
path = "day03/part1/main.rs"

[[bin]]
name = "day03_2"
path = "day03/part2/main.rs"

[[bin]]
name = "day04_1"
path = "day04/part1/main.rs"

[[bin]]
name = "day04_2"
path = "day04/part2/main.rs"

[[bin]]
name = "day05_1"
path = "day05/part1/main.rs"

[[bin]]
name = "day05_2"
path = "day05/part2/main.rs"
